--- a/templates/index.html
+++ b/templates/index.html
@@ -119,10 +119,11 @@
         </div>
     </div>
     
-    <!-- (NOVO) DIV SECRETA PARA PASSAR MENSAGENS DO DJANGO PARA O JS -->
+    {% with all_messages=messages %}
     <div id="feedbackData" 
-         data-success-message="{% for message in messages %}{% if message.tags == 'success' %}{{ message }}{% endif %}{% endfor %}"
-         data-error-message=""
+        data-success-message="{% for message in all_messages %}{% if message.tags == 'success' or message.tags == 'info' %}{{ message|escapejs }} {% endif %}{% endfor %}"
+        data-error-message="{% for message in all_messages %}{% if message.tags == 'error' or message.tags == 'warning' %}{{ message|escapejs }} {% endif %}{% endfor %}"
     ></div>
+    {% endwith %}
 
 {% endblock %}
