--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -50,9 +50,14 @@
 
             <div class="form-group">
             <label for="{{ form.funcao.id_for_label }}">Função <span class="required">*</span></label>
-                {{ form.funcao }}
+                {{ form.funcao }}   
+                <datalist id="lista-funcoes">
+                    {% for funcao in sugestoes_funcoes %}
+                        <option value="{{ funcao }}">
+                    {% endfor %}
+                </datalist>
             </div>
-            
+
             <div class="form-group">
             <label for="{{ form.status.id_for_label }}">Status <span class="required">*</span></label>
                 {{ form.status }}
