--- a/templates/equipamento_form.html
+++ b/templates/equipamento_form.html
@@ -102,8 +102,8 @@
     
     {% with all_messages=messages %}
     <div id="feedbackData" 
-        data-success-message="{% for message in all_messages %}{% if message.tags == 'success' or message.tags == 'info' %}{{ message|escapejs }} {% endif %}{% endfor %}"
-        data-error-message="{% for message in all_messages %}{% if message.tags == 'error' or message.tags == 'warning' %}{{ message|escapejs }} {% endif %}{% endfor %}"
+        data-success-message="{% for message in all_messages %}{% if message.tags == 'success' or message.tags == 'info' %}{{ message }} {% endif %}{% endfor %}"
+        data-error-message="{% for message in all_messages %}{% if message.tags == 'error' or message.tags == 'warning' %}{{ message }} {% endif %}{% endfor %}"
     ></div>
     {% endwith %}
 
