--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -6,10 +6,12 @@
 
 {% block content %}
     
-    <div id="feedbackData" 
-         data-success-message="{{ success_message|default:'' }}"
-         data-error-message="{{ error_message|default:'' }}"
-    ></div>
+    {% with all_messages=messages %}
+        <div id="feedbackData" 
+            data-success-message="{% for message in all_messages %}{% if message.tags == 'success' or message.tags == 'info' %}{{ message }} {% endif %}{% endfor %}"
+            data-error-message="{% for message in all_messages %}{% if message.tags == 'error' or message.tags == 'warning' %}{{ message }} {% endif %}{% endfor %}"
+        ></div>
+    {% endwith %}
 
     
     <div class="page-header">
