--- a/templates/base.html
+++ b/templates/base.html
@@ -134,7 +134,27 @@
 
         </main>
     </div>
-    
+
+    {% if messages %}
+        <div id="feedbackData" 
+             data-success-message="{% for message in messages %}{% if message.tags == 'success' or message.tags == 'info' %}{{ message }} {% endif %}{% endfor %}"
+             data-error-message="{% for message in messages %}{% if message.tags == 'error' or message.tags == 'warning' %}{{ message }} {% endif %}{% endfor %}"
+        ></div>
+    {% endif %}
+
+    <div class="modal-backdrop" id="feedbackModalBackdrop" style="display: none;"></div>
+    <div class="modal" id="feedbackModal" style="display: none;">
+        <div class="modal-header" id="feedbackModalHeader">
+            <h3 id="feedbackModalTitle"></h3>
+            <button class="modal-close" id="feedbackModalCloseBtn">&times;</button>
+        </div>
+        <div class="modal-body">
+            <p id="feedbackModalBody"></p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn-secondary" id="feedbackModalOkBtn">OK</button>
+        </div>
+    </div>
     <script src="{% static 'script.js' %}"></script>
     
     <script src="https://unpkg.com/feather-icons"></script>
